# liza_codex_app

./: backup.sh  eye_state_cam.py  pyproject.toml  run_windows.bat  yolo_detector.py
.venv-win/Scripts/: activate  activate.bat
src/liza_codex_app/: __init__.py  app.py
src/liza_codex_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_app.py
